--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -7,9 +7,9 @@
 }
 
 .btn-primary {
-  @apply border-primary bg-primary dark:border-darkmode-primary dark:text-text-dark text-white dark:bg-darkmode-primary;
+  @apply border-primary text-white hover:bg-transparent dark:hover:text-text-dark bg-primary hover:text-text-dark dark:border-darkmode-primary dark:text-white dark:hover:text-white dark:hover:bg-transparent;
 }
 
 .btn-outline-primary {
-  @apply border-dark text-text-dark hover:bg-dark dark:hover:text-text-dark bg-transparent hover:text-white dark:border-darkmode-primary dark:text-white dark:hover:bg-darkmode-primary;
+  @apply border-primary text-text-dark hover:bg-primary dark:hover:text-white bg-transparent hover:text-white dark:border-darkmode-primary dark:text-white dark:hover:bg-darkmode-primary;
 }
