So many changes...
This is a massive design and content update

--- a/src/layouts/partials/Footer.astro
+++ b/src/layouts/partials/Footer.astro
@@ -28,6 +28,7 @@ const { footer }: { footer: { name: string; url: string }[] } = menu;
       </div>
       <div class="mb-8 text-center lg:col-3 lg:mb-0 lg:mt-0 lg:text-right">
         <Social source={social.main} className="social-icons" />
+        <h4 class="text-text-dark hover:text-primary dark:text-white dark:hover:text-darkmode-primary"><a href="tel:+12488428055">(248) 842-8055</a></h4>
       </div>
     </div>
   </div>
