--- a/src/layouts/partials/Header.astro
+++ b/src/layouts/partials/Header.astro
@@ -110,7 +110,7 @@ const { pathname } = Astro.url;
         navigation_button.enable && (
           <li class="mt-4 inline-block lg:hidden">
             <a
-              class="btn btn-outline-primary btn"
+              class="btn btn-primary btn"
               href={navigation_button.link}
             >
               {navigation_button.label}
@@ -135,7 +135,7 @@ const { pathname } = Astro.url;
       {
         navigation_button.enable && (
           <a
-            class="btn btn-outline-primary btn hidden lg:inline-block"
+            class="btn btn-primary btn hidden lg:inline-block"
             href={navigation_button.link}
           >
             {navigation_button.label}
