--- a/src/layouts/partials/PageHeader.astro
+++ b/src/layouts/partials/PageHeader.astro
@@ -8,10 +8,10 @@ const { title = "" }: { title?: string } = Astro.props;
 <section>
   <div class="container text-center">
     <div
-      class="rounded-2xl bg-gradient-to-b from-body to-light px-8 py-14 dark:from-darkmode-body dark:to-darkmode-light"
+      class="rounded-2xl bg-gradient-to-b from-body to-light px-8 py-8 dark:from-darkmode-body dark:to-darkmode-light"
     >
       <h1 set:text={humanize(title)} />
-      <Breadcrumbs className="mt-6" />
+      <!-- <Breadcrumbs className="mt-6" /> -->
     </div>
   </div>
 </section>
