--- a/src/layouts/partials/Testimonial.astro
+++ b/src/layouts/partials/Testimonial.astro
@@ -6,7 +6,7 @@ const { testimonial } = Astro.props;
 
 {
   testimonial.data.enable && (
-    <section class="section">
+    <section class="section-sm">
       <div class="container">
         <div class="row">
           <div class="mx-auto mb-12 text-center md:col-10 lg:col-8 xl:col-6">
@@ -93,7 +93,7 @@ const { testimonial } = Astro.props;
       loop: true,
       centeredSlides: true,
       autoplay: {
-        delay: 2500,
+        delay: 5000,
         disableOnInteraction: false,
       },
       pagination: {
