--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -27,7 +27,7 @@ const { title, description, meta_title, image } = contact.data;
           <form action={contact_form_action} method="POST">
             <div class="mb-6">
               <label for="name" class="form-label">
-                Full Name <span class="text-red-500">*</span>
+                Name <span class="text-red-500">*</span>
               </label>
               <input
                 id="name"
@@ -35,11 +35,12 @@ const { title, description, meta_title, image } = contact.data;
                 class="form-input"
                 placeholder="John Doe"
                 type="text"
+                required
               />
             </div>
             <div class="mb-6">
               <label for="email" class="form-label">
-                Working Mail <span class="text-red-500">*</span>
+                Email <span class="text-red-500">*</span>
               </label>
               <input
                 id="email"
@@ -47,6 +48,19 @@ const { title, description, meta_title, image } = contact.data;
                 class="form-input"
                 placeholder="john.doe@email.com"
                 type="email"
+                required
+              />
+            </div>
+            <div class="mb-6">
+              <label for="phone" class="form-label">
+                Phone
+              </label>
+              <input
+                id="phone"
+                name="phone"
+                class="form-input"
+                placeholder="(248) 555-1212"
+                type="tel"
               />
             </div>
             <div class="mb-6">
@@ -58,7 +72,8 @@ const { title, description, meta_title, image } = contact.data;
                 name="message"
                 class="form-input"
                 placeholder="Message goes here..."
-                rows="8"></textarea>
+                rows="8"
+                required></textarea>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
