--- a/src/styles/utilities.css
+++ b/src/styles/utilities.css
@@ -7,6 +7,10 @@
   @apply w-full rounded border-transparent bg-light px-6 py-4 text-text-dark placeholder:text-text-light focus:border-primary dark:focus:border-darkmode-primary focus:ring-transparent dark:border-darkmode-border dark:bg-darkmode-light dark:text-darkmode-text-light;
 }
 
+@utility form-checkbox {
+  @apply w-5 h-5 text-green border-green rounded-sm;
+}
+
 @utility form-label {
   @apply mb-4 block font-secondary text-xl font-normal text-text-dark dark:text-darkmode-text-light;
 }
