--- a/src/layouts/partials/Footer.astro
+++ b/src/layouts/partials/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import Logo from '././public/images/logo.svg';
+import Logo from '/public/images/logo.svg';
 import Social from "@/components/Social.astro";
 import menu from "@/config/menu.json";
 import social from "@/config/social.json";
