--- a/src/layouts/partials/Header.astro
+++ b/src/layouts/partials/Header.astro
@@ -1,5 +1,5 @@
 ---
-import Logo from '././public/images/logo.svg';
+import Logo from '/public/images/logo.svg';
 import ThemeSwitcher from "@/components/ThemeSwitcher.astro";
 import config from "@/config/config.json";
 import menu from "@/config/menu.json";
