--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -4,6 +4,8 @@ import Base from "@/layouts/Base.astro";
 import PageHeader from "@/partials/PageHeader.astro";
 import { getEntry } from "astro:content";
 import type { CollectionEntry } from "astro:content";
+import Social from "@/components/Social.astro";
+import social from "@/config/social.json";
 
 const contact = (await getEntry(
   "contact",
@@ -20,6 +22,19 @@ const { title, description, meta_title, image } = contact.data;
   image={image}
 >
   <PageHeader title={title} />
+
+  <section class="section-sm pb-0">
+    <div class="container">
+      <div class="row justify-center">
+        <div class="mx-auto md:col-10 lg:col-6 text-center">
+          <h4>LintLifter is Based in Waterford, Michigan and Proud to Serve Southeast Michigan</h4>
+          <h4 class="text-text-dark hover:text-primary dark:text-white dark:hover:text-darkmode-primary pt-6"><a href="tel:+12488428055">(248) 842-8055</a></h4>
+          <Social source={social.main} className="social-icons pt-6" />
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section class="section-sm">
     <div class="container">
       <div class="row">
