Adding Phone Number
Phone number added to various areas

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -28,8 +28,8 @@ const { title, description, meta_title, image } = contact.data;
       <div class="row justify-center">
         <div class="mx-auto md:col-10 lg:col-6 text-center">
           <h4>LintLifter is Based in Waterford, Michigan and Proud to Serve Southeast Michigan</h4>
-          <h4 class="text-text-dark hover:text-primary dark:text-white dark:hover:text-darkmode-primary pt-6"><a href="tel:+12488428055">(248) 842-8055</a></h4>
-          <Social source={social.main} className="social-icons pt-6" />
+          <h4 class="text-text-dark hover:text-primary dark:text-white dark:hover:text-darkmode-primary mt-6"><a href="tel:+12488428055">(248) 842-8055</a></h4>
+          <Social source={social.main} className="social-icons mt-6" />
         </div>
       </div>
     </div>
