--- a/src/layouts/partials/CallToAction.astro
+++ b/src/layouts/partials/CallToAction.astro
@@ -29,13 +29,18 @@ const { call_to_action } = Astro.props;
                 set:html={markdownify(call_to_action.data.description)}
                 class="mb-6"
               />
+              {call_to_action.data.phone.enable && (
+                <h4 class="mb-6 text-center text-text-dark hover:text-primary dark:text-white dark:hover:text-darkmode-primary"><a href={call_to_action.data.phone.link}>{call_to_action.data.phone.formatted}</a></h4>
+              )}
               {call_to_action.data.button.enable && (
-                <a
-                  class="btn btn-primary"
-                  href={call_to_action.data.button.link}
-                >
-                  {call_to_action.data.button.label}
-                </a>
+                <p class="text-center">
+                  <a
+                    class="btn btn-primary"
+                    href={call_to_action.data.button.link}
+                  >
+                    {call_to_action.data.button.label}
+                  </a>
+                </p>
               )}
             </div>
           </div>
