--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -104,7 +104,7 @@ const { banner, features, videos } = homepage.data as Homepage;
         <div class="container">
           <div class="row items-center justify-between">
             <div
-              class={`mb:md-0 mb-6 md:col-5 ${index % 2 !== 0 && "md:order-2"}`}
+              class={`md:mb-0 mb-6 md:col-5 ${index % 2 !== 0 && "md:order-2"}`}
             >
               <ImageMod
                 src={feature.image}
@@ -152,25 +152,27 @@ const { banner, features, videos } = homepage.data as Homepage;
   <!-- /Features -->
 
   <!-- Videos -->
-  {
-    videos.map((video, index: number) => (
-      <section class={`section-sm ${index % 2 === 0 && "bg-gradient"}`}>
-        <div class="container">
-          <div class="row items-center justify-between">
-            <h2 set:html={markdownify(video.title)} class="mb-4" />
-            {
-              video.content && (
-                <p set:html={markdownify(video.content)} class="mb-8 text-lg" />
-              )
-            }
-            <p>
-              <Youtube client:load id={video.embed} title={video.title} />
-            </p>
-          </div>
-        </div>
-      </section>
-    ))
-  }
+  <section class="section-sm bg-gradient">
+    <div class="container">
+        <div class="row items-end justify-between">
+        {
+          videos.map((video, index: number) => (
+            <div class="md:col-6">
+              <h2 set:html={markdownify(video.title)} class="mb-4" />
+              {
+                video.content && (
+                  <p set:html={markdownify(video.content)} class="mb-8 text-lg" />
+                )
+              }
+              <p>
+                <Youtube client:load id={video.embed} title={video.title} />
+              </p>
+            </div>
+          ))
+        }
+      </div>
+    </div>
+  </section>
   <!-- /Videos -->
 
   <Testimonial testimonial={testimonial} />
