--- a/src/layouts/partials/ImageGallery.astro
+++ b/src/layouts/partials/ImageGallery.astro
@@ -1,27 +1,64 @@
 ---
-
 import { LightGallery } from 'astro-lightgallery';
 const { call_gallery } = Astro.props;
 ---
 
 <section class="section-sm bg-gradient">
-    <div class="container">
-      <h2>Photo Gallery</h2>
-      <LightGallery
-        layout={{
-          imgs: [
-            { src: "/images/gallery/exploding-dryer-vent.jpg", },
-            { src: "/images/gallery/dirty-dryer-vent.jpg", },
-            { src: "/images/gallery/dryer-with-green-towel.jpg", },
-            { src: "/images/gallery/exploding-dryer-vent.jpg", },
-            { src: "/images/gallery/dirty-dryer-vent.jpg", },
-            { src: "/images/gallery/dryer-with-green-towel.jpg", },
-            { src: "/images/gallery/exploding-dryer-vent.jpg", },
-          ],
-        }}
-        options={{
-          thumbnail: true,
-        }}
-      />
-    </div>
-  </section>
+  <div class="container">
+    <h2>Photo Gallery</h2>
+     <LightGallery
+      layout={{
+        imgs: [
+          {
+            src: "/images/gallery/exploding-dryer-vent.jpg",
+            srcThumb: "/images/gallery/exploding-dryer-vent-thumb.jpg",
+            alt: "Exploding Dryer Vent",
+            subHtml: "<h4>Photo by - <a href='https://unsplash.com/@tobbes_rd'> Tobias Rademacher</a>,</h4><p> Location - <a href='https://unsplash.com/s/photos/puezgruppe%2C-wolkenstein-in-gr%C3%B6den%2C-s%C3%BCdtirol%2C-italien'> Puezgruppe, Wolkenstein in Gröden, Südtirol, Italien</a>,layers of blue.</p>",
+          },
+          {
+            src: "/images/gallery/dirty-dryer-vent.jpg",
+            srcThumb: "/images/gallery/dirty-dryer-vent-thumb.jpg",
+            alt: "Dirty Dryer Vent",
+            subHtml: "<h4>Photo by - <a href='https://unsplash.com/@tobbes_rd'> Tobias Rademacher</a>,</h4><p> Location - <a href='https://unsplash.com/s/photos/puezgruppe%2C-wolkenstein-in-gr%C3%B6den%2C-s%C3%BCdtirol%2C-italien'> Puezgruppe, Wolkenstein in Gröden, Südtirol, Italien</a>,layers of blue.</p>",
+          },
+          {
+            src: "/images/gallery/dryer-with-green-towel.jpg",
+            srcThumb: "/images/gallery/dryer-with-green-towel-thumb.jpg",
+            alt: "Dryer With Green Towel",
+            subHtml: "<h4>Photo by - <a href='https://unsplash.com/@tobbes_rd'> Tobias Rademacher</a>,</h4><p> Location - <a href='https://unsplash.com/s/photos/puezgruppe%2C-wolkenstein-in-gr%C3%B6den%2C-s%C3%BCdtirol%2C-italien'> Puezgruppe, Wolkenstein in Gröden, Südtirol, Italien</a>,layers of blue.</p>",
+          },
+          {
+            src: "/images/gallery/exploding-dryer-vent.jpg",
+            srcThumb: "/images/gallery/exploding-dryer-vent-thumb.jpg",
+            alt: "Exploding Dryer Vent",
+            subHtml: "<h4>Photo by - <a href='https://unsplash.com/@tobbes_rd'> Tobias Rademacher</a>,</h4><p> Location - <a href='https://unsplash.com/s/photos/puezgruppe%2C-wolkenstein-in-gr%C3%B6den%2C-s%C3%BCdtirol%2C-italien'> Puezgruppe, Wolkenstein in Gröden, Südtirol, Italien</a>,layers of blue.</p>",
+          },
+          {
+            src: "/images/gallery/dirty-dryer-vent.jpg",
+            srcThumb: "/images/gallery/dirty-dryer-vent-thumb.jpg",
+            alt: "Dirty Dryer Vent",
+            subHtml: "<h4>Photo by - <a href='https://unsplash.com/@tobbes_rd'> Tobias Rademacher</a>,</h4><p> Location - <a href='https://unsplash.com/s/photos/puezgruppe%2C-wolkenstein-in-gr%C3%B6den%2C-s%C3%BCdtirol%2C-italien'> Puezgruppe, Wolkenstein in Gröden, Südtirol, Italien</a>,layers of blue.</p>",
+          },
+          {
+            src: "/images/gallery/dryer-with-green-towel.jpg",
+            srcThumb: "/images/gallery/dryer-with-green-towel-thumb.jpg",
+            alt: "Dryer With Green Towel",
+            subHtml: "<h4>Photo by - <a href='https://unsplash.com/@tobbes_rd'> Tobias Rademacher</a>,</h4><p> Location - <a href='https://unsplash.com/s/photos/puezgruppe%2C-wolkenstein-in-gr%C3%B6den%2C-s%C3%BCdtirol%2C-italien'> Puezgruppe, Wolkenstein in Gröden, Südtirol, Italien</a>,layers of blue.</p>",
+          },
+          {
+            src: "/images/gallery/exploding-dryer-vent.jpg",
+            srcThumb: "/images/gallery/exploding-dryer-vent-thumb.jpg",
+            alt: "Exploding Dryer Vent",
+            subHtml: "<h4>Photo by - <a href='https://unsplash.com/@tobbes_rd'> Tobias Rademacher</a>,</h4><p> Location - <a href='https://unsplash.com/s/photos/puezgruppe%2C-wolkenstein-in-gr%C3%B6den%2C-s%C3%BCdtirol%2C-italien'> Puezgruppe, Wolkenstein in Gröden, Südtirol, Italien</a>,layers of blue.</p>",
+          },
+        ],
+      }}
+      options={{
+        thumbnail: true,
+        download: false,
+        autoplay: true,
+        slideShowInterval: 1250,
+      }}
+    />
+  </div>
+</section>
