Changes from Mercedes
content changes and such

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,7 +46,7 @@ const { banner, features, videos } = homepage.data as Homepage;
   <section class="section-sm">
     <div class="container">
       <div class="row justify-center">
-        <div class="lg:col-7 md:col-9 mb-8 text-center">
+        <div class="xl:col-9 lg:col-12 md:col-12 mb-8 text-center">
           <h1
             set:html={markdownify(banner.title)}
             class="mb-4 text-h3 lg:text-h1"
@@ -104,9 +104,7 @@ const { banner, features, videos } = homepage.data as Homepage;
       <section class={`section-sm ${index % 2 === 0 && "bg-gradient"}`}>
         <div class="container">
           <div class="row items-center justify-between">
-            <div
-              class={`md:mb-0 mb-6 md:col-5 ${index % 2 !== 0 && "md:order-2"}`}
-            >
+            <div class={`md:mb-0 mb-6 md:col-5 ${index % 2 !== 0 && "md:order-2"}`}>
               <ImageMod
                 src={feature.image}
                 height={480}
@@ -126,26 +124,22 @@ const { banner, features, videos } = homepage.data as Homepage;
                   </li>
                 ))}
               </ul>
-              {
-                feature.phone.enable && (
-                  <h4 class="mt-4 text-center text-text-dark hover:text-primary dark:text-white dark:hover:text-darkmode-primary">
-                    <a
-                      href={feature.phone.link}
-                    >
-                      {feature.phone.formatted}
-                    </a>
-                  </h4>
-                )
-              }
-              {feature.button.enable && (
-                <p class="text-center mt-4">
-                  <a class="btn btn-primary" href={feature.button.link}>
-                    {feature.button.label}
-                  </a>
-                </p>
-              )}
             </div>
           </div>
+          {feature.phone.enable && (
+            <h4 class="mt-16 text-center text-text-dark hover:text-primary dark:text-white dark:hover:text-darkmode-primary">
+              <a href={feature.phone.link}>
+                {feature.phone.formatted}
+              </a>
+            </h4>
+          )}
+          {feature.button.enable && (
+            <p class="text-center mt-4">
+              <a class="btn btn-primary" href={feature.button.link}>
+                {feature.button.label}
+              </a>
+            </p>
+          )}
         </div>
       </section>
     ))
