form access key and email on contact
access key is now for info@lintlifter.com

added email address to contact page

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -26,6 +26,7 @@ const { title, description, meta_title, image } = contact.data;
       <div class="row justify-center">
         <div class="mx-auto md:col-10 lg:col-6 text-center">
           <h4>LintLifter is Based in Waterford, Michigan and Proud to Serve Southeast Michigan</h4>
+          <h4 class="text-text-dark hover:text-primary dark:text-white dark:hover:text-darkmode-primary mt-6"><a href="mailto:info@lintlifter.com" title="Email LintLifter">info@lintlifter.com</a></h4>
           <h4 class="text-text-dark hover:text-primary dark:text-white dark:hover:text-darkmode-primary mt-6"><a href="tel:+12488428055">(248) 842-8055</a></h4>
           <Social source={social.main} className="social-icons mt-6" />
         </div>
@@ -38,7 +39,7 @@ const { title, description, meta_title, image } = contact.data;
       <div class="row">
         <div class="mx-auto md:col-10 lg:col-6">
           <form method="POST" id="form">
-            <input type="hidden" name="access_key" value="87201446-65e7-4f07-b847-6c167c54e819">
+            <input type="hidden" name="access_key" value="d19f7552-c62a-4f8e-9262-696f3ae6e6d3">
             <div class="mb-6">
               <label for="name" class="form-label">
                 Name <span class="text-red-500">*</span>
