--- a/src/layouts/partials/ImageGallery.astro
+++ b/src/layouts/partials/ImageGallery.astro
@@ -5,51 +5,141 @@ const { call_gallery } = Astro.props;
 
 <section class="section-sm bg-gradient">
   <div class="container">
-    <h2>Photo Gallery</h2>
+    <h2 class="mb-4">Photo Gallery</h2>
      <LightGallery
       layout={{
         imgs: [
           {
-            src: "/images/gallery/exploding-dryer-vent.jpg",
-            srcThumb: "/images/gallery/exploding-dryer-vent-thumb.jpg",
-            alt: "Exploding Dryer Vent",
-            subHtml: "<h4>Photo by - <a href='https://unsplash.com/@tobbes_rd'> Tobias Rademacher</a>,</h4><p> Location - <a href='https://unsplash.com/s/photos/puezgruppe%2C-wolkenstein-in-gr%C3%B6den%2C-s%C3%BCdtirol%2C-italien'> Puezgruppe, Wolkenstein in Gröden, Südtirol, Italien</a>,layers of blue.</p>",
+            src: "/images/gallery/After a Dryer Vent Cleaning.jpg",
+            srcThumb: "/images/gallery/After a Dryer Vent Cleaning - thumb.jpg",
+            alt: "After a Dryer Vent Cleaning",
+            subHtml: "<h4>After a Dryer Vent Cleaning</h4>",
           },
           {
-            src: "/images/gallery/dirty-dryer-vent.jpg",
-            srcThumb: "/images/gallery/dirty-dryer-vent-thumb.jpg",
-            alt: "Dirty Dryer Vent",
-            subHtml: "<h4>Photo by - <a href='https://unsplash.com/@tobbes_rd'> Tobias Rademacher</a>,</h4><p> Location - <a href='https://unsplash.com/s/photos/puezgruppe%2C-wolkenstein-in-gr%C3%B6den%2C-s%C3%BCdtirol%2C-italien'> Puezgruppe, Wolkenstein in Gröden, Südtirol, Italien</a>,layers of blue.</p>",
+            src: "/images/gallery/After Commercial Air Duct Cleaning.jpg",
+            srcThumb: "/images/gallery/After Commercial Air Duct Cleaning - thumb.jpg",
+            alt: "After Commercial Air Duct Cleaning",
+            subHtml: "<h4>After Commercial Air Duct Cleaning</h4>",
           },
           {
-            src: "/images/gallery/dryer-with-green-towel.jpg",
-            srcThumb: "/images/gallery/dryer-with-green-towel-thumb.jpg",
-            alt: "Dryer With Green Towel",
-            subHtml: "<h4>Photo by - <a href='https://unsplash.com/@tobbes_rd'> Tobias Rademacher</a>,</h4><p> Location - <a href='https://unsplash.com/s/photos/puezgruppe%2C-wolkenstein-in-gr%C3%B6den%2C-s%C3%BCdtirol%2C-italien'> Puezgruppe, Wolkenstein in Gröden, Südtirol, Italien</a>,layers of blue.</p>",
+            src: "/images/gallery/Bee Nest and Dryer Vent.jpg",
+            srcThumb: "/images/gallery/Bee Nest and Dryer Vent - thumb.jpg",
+            alt: "Bee Nest and Dryer Vent",
+            subHtml: "<h4>Bee Nest and Dryer Vent</h4>",
           },
           {
-            src: "/images/gallery/exploding-dryer-vent.jpg",
-            srcThumb: "/images/gallery/exploding-dryer-vent-thumb.jpg",
-            alt: "Exploding Dryer Vent",
-            subHtml: "<h4>Photo by - <a href='https://unsplash.com/@tobbes_rd'> Tobias Rademacher</a>,</h4><p> Location - <a href='https://unsplash.com/s/photos/puezgruppe%2C-wolkenstein-in-gr%C3%B6den%2C-s%C3%BCdtirol%2C-italien'> Puezgruppe, Wolkenstein in Gröden, Südtirol, Italien</a>,layers of blue.</p>",
+            src: "/images/gallery/Before a Dryer Vent Cleaning.jpg",
+            srcThumb: "/images/gallery/Before a Dryer Vent Cleaning - thumb.jpg",
+            alt: "Before a Dryer Vent Cleaning",
+            subHtml: "<h4>Before a Dryer Vent Cleaning</h4>",
           },
           {
-            src: "/images/gallery/dirty-dryer-vent.jpg",
-            srcThumb: "/images/gallery/dirty-dryer-vent-thumb.jpg",
-            alt: "Dirty Dryer Vent",
-            subHtml: "<h4>Photo by - <a href='https://unsplash.com/@tobbes_rd'> Tobias Rademacher</a>,</h4><p> Location - <a href='https://unsplash.com/s/photos/puezgruppe%2C-wolkenstein-in-gr%C3%B6den%2C-s%C3%BCdtirol%2C-italien'> Puezgruppe, Wolkenstein in Gröden, Südtirol, Italien</a>,layers of blue.</p>",
+            src: "/images/gallery/Before and After an AC Condenser Cleaning.jpg",
+            srcThumb: "/images/gallery/Before and After an AC Condenser Cleaning - thumb.jpg",
+            alt: "Before and After an AC Condenser Cleaning",
+            subHtml: "<h4>Before and After an AC Condenser Cleaning</h4>",
           },
           {
-            src: "/images/gallery/dryer-with-green-towel.jpg",
-            srcThumb: "/images/gallery/dryer-with-green-towel-thumb.jpg",
-            alt: "Dryer With Green Towel",
-            subHtml: "<h4>Photo by - <a href='https://unsplash.com/@tobbes_rd'> Tobias Rademacher</a>,</h4><p> Location - <a href='https://unsplash.com/s/photos/puezgruppe%2C-wolkenstein-in-gr%C3%B6den%2C-s%C3%BCdtirol%2C-italien'> Puezgruppe, Wolkenstein in Gröden, Südtirol, Italien</a>,layers of blue.</p>",
+            src: "/images/gallery/Behind a Dryer With Detached Vent.jpg",
+            srcThumb: "/images/gallery/Behind a Dryer With Detached Vent - thumb.jpg",
+            alt: "Behind a Dryer With Detached Vent",
+            subHtml: "<h4>Behind a Dryer With Detached Vent</h4>",
           },
           {
-            src: "/images/gallery/exploding-dryer-vent.jpg",
-            srcThumb: "/images/gallery/exploding-dryer-vent-thumb.jpg",
-            alt: "Exploding Dryer Vent",
-            subHtml: "<h4>Photo by - <a href='https://unsplash.com/@tobbes_rd'> Tobias Rademacher</a>,</h4><p> Location - <a href='https://unsplash.com/s/photos/puezgruppe%2C-wolkenstein-in-gr%C3%B6den%2C-s%C3%BCdtirol%2C-italien'> Puezgruppe, Wolkenstein in Gröden, Südtirol, Italien</a>,layers of blue.</p>",
+            src: "/images/gallery/Birds Nest in Dryer Vent.jpg",
+            srcThumb: "/images/gallery/Birds Nest in Dryer Vent - thumb.jpg",
+            alt: "Birds Nest in Dryer Vent",
+            subHtml: "<h4>Birds Nest in Dryer Vent</h4>",
+          },
+          {
+            src: "/images/gallery/Burnt Vinyl Dryer Duct.jpg",
+            srcThumb: "/images/gallery/Burnt Vinyl Dryer Duct - thumb.jpg",
+            alt: "Burnt Vinyl Dryer Duct",
+            subHtml: "<h4>Burnt Vinyl Dryer Duct - These are no longer up to code and need to be replaced with a metal dryer duct for fire safety.</h4>",
+          },
+          {
+            src: "/images/gallery/Clean Dryer Vent.jpg",
+            srcThumb: "/images/gallery/Clean Dryer Vent - thumb.jpg",
+            alt: "Clean Dryer Vent",
+            subHtml: "<h4>Clean Dryer Vent</h4>",
+          },
+          {
+            src: "/images/gallery/Clogged Blower Motor in Dryer.jpg",
+            srcThumb: "/images/gallery/Clogged Blower Motor in Dryer - thumb.jpg",
+            alt: "Clogged Blower Motor in Dryer",
+            subHtml: "<h4>Clogged Blower Motor in Dryer</h4>",
+          },
+          {
+            src: "/images/gallery/Clogged Dryer Vent - 01.jpg",
+            srcThumb: "/images/gallery/Clogged Dryer Vent - 01 - thumb.jpg",
+            alt: "Clogged Dryer Vent",
+            subHtml: "<h4>Clogged Dryer Vent</h4>",
+          },
+          {
+            src: "/images/gallery/Clogged Dryer Vent - 02.jpg",
+            srcThumb: "/images/gallery/Clogged Dryer Vent - 02 - thumb.jpg",
+            alt: "Clogged Dryer Vent",
+            subHtml: "<h4>Clogged Dryer Vent</h4>",
+          },
+          {
+            src: "/images/gallery/Clogged Dryer Vent Cover.jpg",
+            srcThumb: "/images/gallery/Clogged Dryer Vent Cover - thumb.jpg",
+            alt: "Clogged Dryer Vent Cover",
+            subHtml: "<h4>Clogged Dryer Vent Cover</h4>",
+          },
+          {
+            src: "/images/gallery/Dirty Refrigerator Condenser.jpg",
+            srcThumb: "/images/gallery/Dirty Refrigerator Condenser - thumb.jpg",
+            alt: "Dirty Refrigerator Condenser",
+            subHtml: "<h4>Dirty Refrigerator Condenser</h4>",
+          },
+          {
+            src: "/images/gallery/Inside of a Dirty Dryer.jpg",
+            srcThumb: "/images/gallery/Inside of a Dirty Dryer - thumb.jpg",
+            alt: "Inside of a Dirty Dryer",
+            subHtml: "<h4>Inside of a Dirty Dryer</h4>",
+          },
+          {
+            src: "/images/gallery/Lint From Dryer Vent.jpg",
+            srcThumb: "/images/gallery/Lint From Dryer Vent - thumb.jpg",
+            alt: "Lint From Dryer Vent",
+            subHtml: "<h4>Lint From Dryer Vent</h4>",
+          },
+          {
+            src: "/images/gallery/Mostly Clogged Dryer Vent.jpg",
+            srcThumb: "/images/gallery/Mostly Clogged Dryer Vent - thumb.jpg",
+            alt: "Mostly Clogged Dryer Vent",
+            subHtml: "<h4>Mostly Clogged Dryer Vent</h4>",
+          },
+          {
+            src: "/images/gallery/Mostly Obstructed Dryer Vent Cover From the Back.jpg",
+            srcThumb: "/images/gallery/Mostly Obstructed Dryer Vent Cover From the Back - thumb.jpg",
+            alt: "Mostly Obstructed Dryer Vent Cover From the Back",
+            subHtml: "<h4>Mostly Obstructed Dryer Vent Cover From the Back</h4>",
+          },
+          {
+            src: "/images/gallery/Mostly Obstructed Dryer Vent Cover From the Front.jpg",
+            srcThumb: "/images/gallery/Mostly Obstructed Dryer Vent Cover From the Front - thumb.jpg",
+            alt: "Mostly Obstructed Dryer Vent Cover From the Front",
+            subHtml: "<h4>Mostly Obstructed Dryer Vent Cover From the Front</h4>",
+          },
+          {
+            src: "/images/gallery/Nest in Dryer Vent.jpg",
+            srcThumb: "/images/gallery/Nest in Dryer Vent - thumb.jpg",
+            alt: "Nest in Dryer Vent",
+            subHtml: "<h4>Nest in Dryer Vent</h4>",
+          },
+          {
+            src: "/images/gallery/Nest Removal From Dryer Vent.jpg",
+            srcThumb: "/images/gallery/Nest Removal From Dryer Vent - thumb.jpg",
+            alt: "Nest Removal From Dryer Vent",
+            subHtml: "<h4>Nest Removal From Dryer Vent</h4>",
+          },
+          {
+            src: "/images/gallery/We Are Available for Trade Shows.jpg",
+            srcThumb: "/images/gallery/We Are Available for Trade Shows - thumb.jpg",
+            alt: "We Are Available for Trade Shows",
+            subHtml: "<h4>We Are Available for Trade Shows - We Frequent Fire Department Open Houses.</h4>",
           },
         ],
       }}
